--- a/src/admin/components/history/template.html
+++ b/src/admin/components/history/template.html
@@ -73,6 +73,15 @@
                         <span class="mdl-ripple"></span>
             </span>
         </button>
+        <button type="button"
+                onclick="this.form.createBill()"
+                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            <i class="material-icons">add_box</i>
+            FACTURA
+            <span class="mdl-button__ripple-container">
+                        <span class="mdl-ripple"></span>
+            </span>
+        </button>
     </div>
     <div class="cgt-graphs mdl-shadow--2dp mdl-cell mdl-cell--8-col" style="position: relative;">
         <div class="mdl-card__title mdl-color--primary mdl-color-text--primary-contrast">
