--- a/src/public/components/icon/icon.html
+++ b/src/public/components/icon/icon.html
@@ -1,4 +1,4 @@
-<a href="{{url}}" onclick="window.navigate(this, event)" #wrapper class="clickable">
+<a href="{{url}}" onclick="window.navigate(this, event)" #wrapper class="clickable icon-wrapper">
     <div #loader class="c100 p50 big">
         <span #loadertext>50%</span>
         <div #loaderslice>
@@ -6,7 +6,7 @@
             <div class="fill"></div>
         </div>
     </div>
-    <div #icon>
+    <div #icon class="icon">
         <span #notify class="icon-notify">!</span>
     </div>
     <div #text class="dark-grey-color"></div>
