--- a/src/apps/bonusCards/index.scss
+++ b/src/apps/bonusCards/index.scss
@@ -2,4 +2,29 @@
   width: 100%;
 }
 
-#products {}
+#search {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  padding-bottom: 10px;
+  background: white;
+  border-bottom: 1px solid #d8d8d8;
+  z-index: 2;
+  box-shadow: 0 6px 0 white;
+}
+
+#bonus {
+  padding-top: 42px;
+}
+
+#type {
+  display: inline-block;
+  width: 100%;
+  background: rgba(86, 171, 41, 0.19);
+  height: 28px;
+  font-size: 14px;
+  margin-top: 10px;
+  border: none;
+  max-width: 250px;
+}
+
