--- a/src/apps/products/index.scss
+++ b/src/apps/products/index.scss
@@ -6,3 +6,39 @@
   text-align: justify;
   margin-top: 10px;
 }
+
+#search {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  padding-bottom: 10px;
+  background: white;
+  border-bottom: 1px solid #d8d8d8;
+  z-index: 2;
+  box-shadow: 0 6px 0 white;
+}
+
+#productlist {
+  padding-top: 62px;
+}
+
+#brand {
+  display: inline-block;
+  width: 100%;
+  background: rgba(86, 171, 41, 0.19);
+  height: 28px;
+  font-size: 14px;
+  border: none;
+  max-width: 250px;
+}
+
+#type {
+  display: inline-block;
+  width: 100%;
+  background: rgba(86, 171, 41, 0.19);
+  height: 28px;
+  font-size: 14px;
+  margin-top: 10px;
+  border: none;
+  max-width: 250px;
+}
