--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -3,22 +3,26 @@
     </div>
     <div #processes class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-desktop">
     </div>
-    <div #carmen class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #carmen_v class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #jolly class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #estefania class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #cristina class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #cristi class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #susanna class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #vanessa class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
-    </div>
-    <div #eila class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
+    <div class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper" style="position: relative;">
+        <div #carmen class="calendar-item">
+        </div>
+        <div #carmen_v class="calendar-item">
+        </div>
+        <div #ana class="calendar-item">
+        </div>
+        <div #estefania class="calendar-item">
+        </div>
+        <div #cristina class="calendar-item">
+        </div>
+        <div #beatriz class="calendar-item">
+        </div>
+        <div #susanna class="calendar-item">
+        </div>
+        <div #maria class="calendar-item">
+        </div>
+        <div #vanessa class="calendar-item">
+        </div>
+        <div #eila class="calendar-item">
+        </div>
     </div>
 </form>
