treatments and bonusCards refactor

--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -5,7 +5,7 @@
 #carmen {height: 590px;}
 #carmen_v {height: 590px;}
 #ana {height: 590px;}
-#beatriz {height: 590px;}
+#chloe {height: 590px;}
 #susanna {height: 590px;}
 #estefania {height: 590px;}
 #vanessa {height: 590px;}
