--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -8,11 +8,13 @@
         </div>
         <div #carmen_v class="calendar-item">
         </div>
+        <div #ana class="calendar-item" style="display: none">
+        </div>
         <div #estefania class="calendar-item">
         </div>
         <div #cristina class="calendar-item">
         </div>
-        <div #beatriz class="calendar-item">
+        <div #chloe class="calendar-item">
         </div>
         <div #susanna class="calendar-item">
         </div>
