--- a/src/public/components/homePage/homePage.html
+++ b/src/public/components/homePage/homePage.html
@@ -8,6 +8,10 @@
                 <span #icons></span>
             </div>
             <hr class="homePage-line"/>
+            <a href="/es/{{apps.bookings.url}}" onclick="window.navigate(this, event)">
+            <marquee #comunication>
+                ESTAMOS ABIERTOS - RESERVA TU CITA ONLINE
+            </marquee></a>
             <h2 style="color: #e9ba96;">PRODUCTOS EN VENTAS ONLINE</h2>
             <div #slider class="home-product-slider" style="height: 160px;">
 
