--- a/src/public/components/homePage/homePage.scss
+++ b/src/public/components/homePage/homePage.scss
@@ -27,6 +27,15 @@
   -webkit-overflow-scrolling: touch;
 }
 
+#comunication {
+  display: block;
+  margin: 10px 0;
+  font-size: 20px;
+  padding: 7px 0 0 0;
+  background: #56ab29;
+  color: white;
+}
+
 #error {
   position: absolute;
   top: 10px;
