--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -8,17 +8,17 @@
         </div>
         <div #carmen_v class="calendar-item">
         </div>
-        <div #ana class="calendar-item" style="display: none">
-        </div>
         <div #estefania class="calendar-item">
         </div>
-        <div #cristina class="calendar-item">
+        <div #ana class="calendar-item">
         </div>
-        <div #chloe class="calendar-item">
+        <div #maria class="calendar-item">
         </div>
         <div #susanna class="calendar-item">
         </div>
-        <div #maria class="calendar-item">
+        <div #wendy class="calendar-item">
+        </div>
+        <div #chloe class="calendar-item">
         </div>
         <div #vanessa class="calendar-item">
         </div>
