--- a/src/admin/components/clients/edit-client.html
+++ b/src/admin/components/clients/edit-client.html
@@ -13,7 +13,7 @@
                 <label class="mdl-textfield__label" for="surname">APPELIDO</label>
             </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input #email autocomplete="off" {{disabled}}
+                <input #email autocomplete="off"
                        value="{{email}}" class="mdl-textfield__input" type="email" id="email"/>
                 <label class="mdl-textfield__label" for="email">CORREO</label>
             </div>
