--- a/src/admin/components/print/template.html
+++ b/src/admin/components/print/template.html
@@ -2,6 +2,12 @@
     <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
         <div class="mdl-card__title mdl-color--primary mdl-color-text--primary-contrast">CARGAR DATOS DEL BANCO:</div>
         <div style="padding: 20px">
+            <select #account>
+                <option value="main">CUENTA</option>
+                <option value="secondary">IVA</option>
+            </select>
+            <br/>
+            <br/>
             <div #files></div>
             <input type="file" value="ALLEGA UN FILE" name="fileUpload"
                    id="csv_upload"/>
