--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -4,11 +4,12 @@
 
 #carmen {height: 615px;}
 #carmen_v {height: 615px;}
-#ana {height: 615px;}
-#chloe {height: 615px;}
-#susanna {height: 615px;}
 #estefania {height: 615px;}
+#ana {height: 615px;}
+#jollyIII {height: 615px;}
+#maria {height: 615px;}
+#susanna {height: 615px;}
+#wendy {height: 615px;}
+#chloe {height: 615px;}
 #vanessa {height: 615px;}
 #eila {height: 615px;}
-#cristina {height: 615px;}
-#maria {height: 615px;}
