--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -12,6 +12,8 @@
         </div>
         <div #ana class="calendar-item">
         </div>
+        <div #jollyiii class="calendar-item">
+        </div>
         <div #maria class="calendar-item">
         </div>
         <div #susanna class="calendar-item">
