new employee andre

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -1,7 +1,9 @@
 <form #wrapper class="mdl-grid cgt-content">
-    <div #minicalendar class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--4-col-desktop">
+    <div #minicalendar
+        class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--4-col-desktop">
     </div>
-    <div #processes class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-desktop">
+    <div #processes
+        class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-desktop">
     </div>
     <div class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper" style="position: relative;">
         <div #carmen class="calendar-item">
@@ -17,6 +19,8 @@
         <div #maria class="calendar-item">
         </div>
         <div #susanna class="calendar-item">
+        </div>
+        <div #andre class="calendar-item">
         </div>
         <div #wendy class="calendar-item">
         </div>
