--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -320,6 +320,11 @@ th {
     color: #ffffff !important;
 }
 
+.process-color-24 {
+    background-color: #478e6d !important;
+    color: #ffffff !important;
+}
+
 /** NOTE */
 .process-color-96 {
     background-color: #ffffff !important;
